Fix z-index bug in chrome

--- a/index.scss
+++ b/index.scss
@@ -4,13 +4,13 @@
 
 .line-plot.canvas {
     position: absolute;
-    z-index: 1000;
+    z-index: -1;
 }
 
 .line-plot.svg {
     position: absolute;
     pointer-events: none;
-    z-index: -1;
+    z-index: -2;
 }
 
 .line-plot {
